nivasa-macros/tests/trybuild/scxml_handler_invalid_statechart.rs
use nivasa_macros::scxml_handler;

#[scxml_handler(statechart = "request/../../evil", state = "guard_chain")]
fn guarded_handler() {}

fn main() {}
